doc/v2.0/_sources/reference/generated/ak.types.RecordType.rst.txt
ak.types.RecordType
-------------------

.. py:module: ak.types.RecordType

Defined in `awkward.types.recordtype <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/types/recordtype.py>`__ on `line 14 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/types/recordtype.py#L14>`__.

.. py:class:: ak.types.RecordType(self, contents, fields, *, parameters=None, typestr=None)



.. _ak-types-recordtype-contents:

.. py:attribute:: ak.types.RecordType.contents



.. _ak-types-recordtype-fields:

.. py:attribute:: ak.types.RecordType.fields



.. _ak-types-recordtype-is_tuple:

.. py:attribute:: ak.types.RecordType.is_tuple



.. _ak-types-recordtype-_str_parameters_exclude:

.. py:attribute:: ak.types.RecordType._str_parameters_exclude
    :value: ('__categorical__', '__record__')



.. _ak-types-recordtype-_str:

.. py:method:: ak.types.RecordType._str(self, indent, compact)



.. _ak-types-recordtype-__repr__:

.. py:method:: ak.types.RecordType.__repr__(self)



.. _ak-types-recordtype-__eq__:

.. py:method:: ak.types.RecordType.__eq__(self, other)



.. _ak-types-recordtype-index_to_field:

.. py:method:: ak.types.RecordType.index_to_field(self, index)



.. _ak-types-recordtype-field_to_index:

.. py:method:: ak.types.RecordType.field_to_index(self, field)



.. _ak-types-recordtype-has_field:

.. py:method:: ak.types.RecordType.has_field(self, field)



.. _ak-types-recordtype-content:

.. py:method:: ak.types.RecordType.content(self, index_or_field)

