doc/2.2/_sources/reference/generated/ak.types.RecordType.rst.txt
ak.types.RecordType
-------------------

.. py:module: ak.types.RecordType

Defined in `awkward.types.recordtype <https://github.com/scikit-hep/awkward-1.0/blob/1b1211e8856ad177e4c584195af765febd21974a/src/awkward/types/recordtype.py>`__ on `line 19 <https://github.com/scikit-hep/awkward-1.0/blob/1b1211e8856ad177e4c584195af765febd21974a/src/awkward/types/recordtype.py#L19>`__.

.. py:class:: ak.types.RecordType(self, contents, fields, *, parameters=None, typestr=None)



.. _ak-types-recordtype-copy:

.. py:method:: ak.types.RecordType.copy(self, *, contents=UNSET, fields=UNSET, parameters=UNSET, typestr=UNSET)



.. _ak-types-recordtype-contents:

.. py:attribute:: ak.types.RecordType.contents



.. _ak-types-recordtype-fields:

.. py:attribute:: ak.types.RecordType.fields



.. _ak-types-recordtype-is_tuple:

.. py:attribute:: ak.types.RecordType.is_tuple



.. _ak-types-recordtype-_str_parameters_exclude:

.. py:attribute:: ak.types.RecordType._str_parameters_exclude
    :value: ('__categorical__', '__record__')



.. _ak-types-recordtype-_str:

.. py:method:: ak.types.RecordType._str(self, indent, compact, behavior)



.. _ak-types-recordtype-__repr__:

.. py:method:: ak.types.RecordType.__repr__(self)



.. _ak-types-recordtype-_is_equal_to:

.. py:method:: ak.types.RecordType._is_equal_to(self, other, all_parameters)



.. _ak-types-recordtype-index_to_field:

.. py:method:: ak.types.RecordType.index_to_field(self, index)



.. _ak-types-recordtype-field_to_index:

.. py:method:: ak.types.RecordType.field_to_index(self, field)



.. _ak-types-recordtype-has_field:

.. py:method:: ak.types.RecordType.has_field(self, field)



.. _ak-types-recordtype-content:

.. py:method:: ak.types.RecordType.content(self, index_or_field)

